--- a/.jscsrc
+++ b/.jscsrc
@@ -5,9 +5,7 @@
   "requireSpaceAfterBinaryOperators": ["+", "-", "/", "*", "=", "==", "===", "!=", "!=="],
   "requireLineFeedAtFileEnd": true,
   "requireSpaceBeforeBinaryOperators": true,
-  "requireSpaceBeforePostfixUnaryOperators": true,
   "requireSpaceAfterBinaryOperators": true,
-  "requireSpaceBeforePostfixUnaryOperators": true,
   "requireKeywordsOnNewLine": ["else", "else if"],
   "requireSpacesInFunctionExpression": {
     "beforeOpeningCurlyBrace": true,
@@ -20,6 +18,6 @@
   "disallowMultipleLineBreaks": true,
   "disallowSpacesInsideArrayBrackets": true,
   "disallowSpacesInsideObjectBrackets": true,
-  "disallowSpaceAfterPrefixUnaryOperators": [ "++", "--", "-", "+", "~", "!" ],
+  "disallowSpaceAfterPrefixUnaryOperators": [ "-", "+", "~", "!" ],
   "disallowSpaceBeforePostfixUnaryOperators": [ "++", "--" ]
 }
