--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "css-sprite",
-  "version": "0.9.8",
+  "version": "1.0.0",
   "description": "css sprite generator",
   "license": "MIT",
   "repository": {
@@ -11,6 +11,12 @@
   "bugs": {
     "url": "https://github.com/aslansky/css-sprite/issues"
   },
+  "licenses": [
+    {
+      "type": "MIT",
+      "url": "https://github.com/aslansky/css-sprite/blob/master/LICENSE-MIT"
+    }
+  ],
   "author": {
     "name": "Alexander Slansky",
     "email": "alexander@slansky.net",
@@ -26,7 +32,7 @@
     "test": "mocha --reporter spec",
     "coveralls": "istanbul cover _mocha --report lcovonly -- -R spec && cat ./coverage/lcov.info | coveralls && rm -rf ./coverage",
     "coverage": "istanbul cover _mocha --report html -- -R spec",
-    "hint": "jshint lib/**/*.js index.js",
+    "lint": "eslint .",
     "style": "jscs test/*.js lib/**/*.js index.js"
   },
   "main": "./index.js",
@@ -38,37 +44,40 @@
     "scss",
     "less",
     "sass",
-    "stylus",
-    "gulpfriendly",
-    "gruntplugin"
+    "gulpfriendly"
   ],
   "dependencies": {
     "async": "^0.9.0",
+    "bluebird": "^2.9.16",
     "color": "^0.8.0",
+    "colors": "^1.0.3",
     "cssesc": "^0.1.0",
-    "graceful-fs": "^3.0.5",
+    "fs-extra": "^0.16.5",
+    "handlebars": "^3.0.1",
     "imageinfo": "^1.0.4",
-    "json2css": "^6.1.0",
     "layout": "~2.2.0",
-    "lodash": "^3.3.1",
+    "lodash": "^3.6.0",
     "lwip": "0.0.6",
-    "mkdirp": "^0.5.0",
-    "mustache": "^1.1.0",
     "nomnom": "^1.8.1",
+    "parse-filepath": "^0.5.0",
+    "ternary-stream": "^1.2.3",
     "through2": "^0.6.3",
+    "through2-map": "^1.4.0",
+    "through2-spy": "^1.2.0",
     "vinyl": "^0.4.6",
-    "vinyl-fs": "1.0.0"
+    "vinyl-fs": "^1.0.0"
   },
   "devDependencies": {
+    "chai": "^2.2.0",
+    "clean-css": "^3.1.4",
+    "coveralls": "^2.11.2",
+    "grunt": "^0.4.5",
+    "istanbul": "^0.3.7",
+    "less": "^2.4.0",
     "mocha": "^2.1.0",
     "mocha-lcov-reporter": "^0.0.2",
-    "coveralls": "^2.11.2",
-    "istanbul": "^0.3.7",
-    "should": "^5.1.0",
-    "stylus": "^0.50.0",
     "node-sass": "^2.0.1",
-    "less": "^2.4.0",
-    "clean-css": "^3.1.4",
-    "grunt": "^0.4.5"
+    "object-stream": "0.0.1",
+    "stylus": "^0.50.0"
   }
 }
