--- a/package.json
+++ b/package.json
@@ -1,20 +1,20 @@
 {
-  "name": "css-sprite",
+  "name": "sprity",
   "version": "1.0.0",
-  "description": "css sprite generator",
+  "description": "A image sprite generator",
   "license": "MIT",
   "repository": {
     "type": "git",
-    "url": "https://github.com/aslansky/css-sprite.git"
+    "url": "https://github.com/sprity/sprity.git"
   },
-  "homepage": "https://github.com/aslansky/css-sprite",
+  "homepage": "https://github.com/sprity/sprity",
   "bugs": {
-    "url": "https://github.com/aslansky/css-sprite/issues"
+    "url": "https://github.com/sprity/sprity/issues"
   },
   "licenses": [
     {
       "type": "MIT",
-      "url": "https://github.com/aslansky/css-sprite/blob/master/LICENSE-MIT"
+      "url": "https://github.com/sprity/sprity/blob/master/LICENSE-MIT"
     }
   ],
   "author": {
@@ -26,7 +26,7 @@
     "node": ">=0.10.0"
   },
   "bin": {
-    "css-sprite": "./bin/cli.js"
+    "sprity": "./bin/cli.js"
   },
   "scripts": {
     "test": "mocha --reporter spec",
@@ -44,6 +44,8 @@
     "scss",
     "less",
     "sass",
+    "sprity",
+    "css-sprity",
     "gulpfriendly"
   ],
   "dependencies": {
@@ -60,6 +62,8 @@
     "lwip": "0.0.6",
     "nomnom": "^1.8.1",
     "parse-filepath": "^0.5.0",
+    "sprity-css": "^1.0.0",
+    "sprity-lwip": "^1.0.0",
     "ternary-stream": "^1.2.3",
     "through2": "^0.6.3",
     "through2-map": "^1.4.0",
@@ -69,15 +73,10 @@
   },
   "devDependencies": {
     "chai": "^2.2.0",
-    "clean-css": "^3.1.4",
     "coveralls": "^2.11.2",
-    "grunt": "^0.4.5",
     "istanbul": "^0.3.7",
-    "less": "^2.4.0",
     "mocha": "^2.1.0",
     "mocha-lcov-reporter": "^0.0.2",
-    "node-sass": "^2.0.1",
-    "object-stream": "0.0.1",
-    "stylus": "^0.50.0"
+    "object-stream": "0.0.1"
   }
 }
